@@ -54,7 +54,7 @@ public:
   ~ParenCell();
 
   wxString Paren_Open(){return wxT("(");}
-  wxString Paren_Open_Top(){return wxT("\x2398");}
+  wxString Paren_Open_Top(){return wxT("\x239b");}
   wxString Paren_Open_Mid(){return wxT("\x239c");}
   wxString Paren_Open_Bottom(){return wxT("\x239d");}
   wxString Paren_Close(){return wxT(")");}
@@ -80,21 +80,44 @@ public:
   wxString ToMathML();
   wxString ToOMML();
   wxString ToXML();
+  void SetFont(int fontsize);
   void SetParent(MathCell *parent);
-protected:
+private:
   MathCell *m_innerCell;
   TextCell *m_open, *m_close;
   MathCell *m_last1;
   bool m_print;
-  int m_charWidth, m_charHeight;
-  int m_charWidth1, m_charHeight1;
-  int m_parenTopHeight, m_parenBottomHeight, m_parenHeight, m_parenMidNum,
-    m_parenMidHeight, m_parenWidth;
+  int m_charWidth;
+  int m_charHeight;
+  int m_charWidth1;
+  int m_charHeight1;
+  /*! The height of the top part of the parenthesis.
+
+    Valid if the parenthesis is assembled out of more than 1 characters.
+   */
+  int m_parenTopHeight;
+  /*! The height of the bottom part of the parenthesis.
+
+    Valid if the parenthesis is assembled out of more than 1 characters.
+   */
+  int m_parenBottomHeight;
+  //! The height of the parenthesis
+  int m_parenHeight;
+  //! The number of middle parts being needed to reach an appropriate parenthesis size
+  int m_parenMidNum;
+  /*! The height of a middle part character of the parenthesis.
+
+    Valid if the parenthesis is assembled out of more than 1 characters; See also m_parenMidNum.
+   */
+  int m_parenMidHeight;
+  //! The width of an parenthesis
+  int m_parenWidth;
   enum parenthesisStyle
   {
     normal = 0,   //!< An ordinary parenthesis sign
-    assembled = 1 //!< Assemble a "Parenthesis top half sign", a bot half sign and (if needed) a
+    assembled = 1,//!< Assemble a "Parenthesis top half sign", a bot half sign and (if needed) a
                               //   vertical line.
+    handdrawn = 2 //!< No suitable font => Draw the parenthesis by hand.
   };
 
   /* How to create a big parenthesis sign?
