@@ -34,6 +34,7 @@ Current:
   * Make sure that wxMaxima detects (and notifies the user) if maxima crashes
     or runs out of memory.
   * An all-new manual and improved documentation of the source code.
+  * Parenthesis now are drawn using unicode characters, if available.
   * Several small editor enhancements.
   * More unicode characters in the symbols pane
   * Several content assistent enhancements for platforms that support it.
